--- a/Keynetic/composer.json
+++ b/Keynetic/composer.json
@@ -18,16 +18,19 @@
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "friendsofsymfony/user-bundle": "~2.0@dev"
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "knplabs/github-api": "~1.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
         "symfony/phpunit-bridge": "~2.7",
-        "behat/behat": "~3.0",
-        "behat/symfony2-extension": "~2.0",
-        "behat/mink": "1.6.*",
-        "behat/mink-extension": "~2.0",
-        "behat/mink-selenium2-driver": "*"
+        "behat/behat": "^2.5",
+        "behat/mink": "^1.4",
+        "behat/mink-extension": "*",
+        "behat/symfony2-extension": "1.1.*",
+        "behat/mink-goutte-driver": "*",
+        "behat/mink-selenium2-driver": "*",
+        "fabpot/goutte": "1.*"
     },
     "scripts": {
         "post-install-cmd": [
